@@ -31,7 +31,7 @@ x::Coordinate.
 - A C \partial_{x}{B D};
 \end{screen}
 Note that a product remains inside the derivative; to expand that
-use \subsalg{prodrule}. 
+use \subscommand{prodrule}. 
 
 Here is another example
 \begin{screen}{1,2,3,4,6}
